-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8001089 | 8 | Christian Thalinger | P3 | Resolved | Fixed | b61 |
| JDK-8018014 | 7u45 | Christian Thalinger | P3 | Closed | Fixed | b01 |
| JDK-8002942 | 7u40 | Christian Thalinger | P3 | Resolved | Fixed | b01 |
| JDK-8000654 | hs24 | Christian Thalinger | P3 | Resolved | Fixed | master |
In certain situations signature types like java/lang/Object may appear to be unloaded which leads to deoptimizations and recompilations.
- backported by
-
JDK-8000654 JSR 292: signature types may appear to be unloaded
-
- Resolved
-
-
JDK-8001089 JSR 292: signature types may appear to be unloaded
-
- Resolved
-
-
JDK-8002942 JSR 292: signature types may appear to be unloaded
-
- Resolved
-
-
JDK-8002943 JSR 292: signature types may appear to be unloaded
-
- Closed
-
-
JDK-8018014 JSR 292: signature types may appear to be unloaded
-
- Closed
-
- relates to
-
JDK-8000740 remove LinkWellKnownClasses
-
- Resolved
-
-
JDK-8079672 NEED_TEST for JDK-8000263
-
- Open
-
(2 relates to)