8000263: JSR 292: signature types may appear to be unloaded

Reviewed-by: kvn, jrose